--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,37 +2,40 @@ spring.application.name=toke
 # =============================================
 # APLICACIÓN
 # =============================================
-server.port=${PORT:8076}
-# Esencial para que las URLs se generen correctamente detrás del proxy de Render
-server.forward-headers-strategy=framework
+server.port=8176
 
-# ===============================================
-# BASE DE DATOS (PARA RENDER Y LOCAL)
-# ===============================================
-# Render inyectará la variable de entorno DATABASE_URL. Si no existe, usará la de localhost.
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/jugueteria_db?createDatabaseIfNotExist=true}
-spring.datasource.username=${MYSQL_USER:root}
-spring.datasource.password=${MYSQL_PASSWORD:alfonso03}
+# =============================================
+# CONEXIÓN A LA BASE DE DATOS (MySQL)
+# =============================================
+spring.datasource.url=jdbc:mysql://localhost:3306/toke_inca_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=alfonso03
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# En producción, 'validate' es más seguro que 'update'.
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=false 
+# =============================================
+# CONFIGURACIÓN DE JPA / HIBERNATE
+# =============================================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
-# ===============================================
-# CONFIGURACIÓN DE SUBIDA DE ARCHIVOS
-# ===============================================
+# =============================================
+# CONFIGURACIÓN DE THYMELEAF (PARA DESARROLLO)
+# =============================================
+spring.thymeleaf.cache=false
+
+# =============================================
+# CONFIGURACIÓN DE UPLOAD DE ARCHIVOS (OPCIONAL)
+# =============================================
+# CORREGIDO: Se eliminó el punto final.
 spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=11MB
+spring.servlet.multipart.max-request-size=10MB
 
-# ===============================================
-# CLOUDINARY (Leído desde Render)
-# ===============================================
-# La configuración del Bean de Cloudinary leerá esta variable automáticamente
-# CLOUDINARY_URL=cloudinary://... (Esta se define en el panel de Render)
-
-# ===============================================
-# EMAIL (Leído desde Render)
-# ===============================================
-resend.api.key=${RESEND_API_KEY} 
-# Define quién envía el correo (mientras pruebas usa el de onboarding)
+# =============================================
+# CONFIGURACIÓN DE ENVÍO DE CORREO (CON GMAIL)
+# =============================================
+# CORREGIDO: Se añadió la 's' a 'spring'.
+resend.api.key=${RESEND_API_KEY}
+# Define quién envía el correo. Para pruebas, Resend te da uno.
 resend.from.email=onboarding@resend.dev
