--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,41 +1,23 @@
 spring.application.name=toke
-# =============================================
-# APLICACIÓN
-# =============================================
 server.port=8176
 
-# =============================================
-# CONEXIÓN A LA BASE DE DATOS (MySQL)
-# =============================================
-spring.datasource.url=jdbc:mysql://localhost:3306/toke_inca_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=alfonso03
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# --- CONEXIÓN A LA BASE DE DATOS ---
+# En Render, usará las variables de entorno que le pasemos.
+# En local, usará los valores por defecto.
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:toke_inca_db}?useSSL=false
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:alfonso03}
 
-# =============================================
-# CONFIGURACIÓN DE JPA / HIBERNATE
-# =============================================
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# --- CONFIGURACIÓN DE JPA / HIBERNATE ---
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO:update}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
 
-# =============================================
-# CONFIGURACIÓN DE THYMELEAF (PARA DESARROLLO)
-# =============================================
-spring.thymeleaf.cache=false
+# --- CONFIGURACIÓN DE THYMELEAF ---
+spring.thymeleaf.cache=${SPRING_THYMELEAF_CACHE:false}
 
-# =============================================
-# CONFIGURACIÓN DE UPLOAD DE ARCHIVOS (OPCIONAL)
-# =============================================
-# CORREGIDO: Se eliminó el punto final.
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
-
-# =============================================
-# CONFIGURACIÓN DE ENVÍO DE CORREO (CON GMAIL)
-# =============================================
-# CORREGIDO: Se añadió la 's' a 'spring'.
+# --- CREDENCIALES DE SERVICIOS EXTERNOS (SENSIBLES) ---
+# Se leen desde las variables de entorno.
+cloudinary.url=${CLOUDINARY_URL}
 resend.api.key=${RESEND_API_KEY}
-# Define quién envía el correo. Para pruebas, Resend te da uno.
-resend.from.email=onboarding@resend.dev
+resend.from.email=${RESEND_FROM_EMAIL:onboarding@resend.dev}
