subida de archivos remplazo docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,4 @@ spring.thymeleaf.cache=${SPRING_THYMELEAF_CACHE:false}
 # Se leen desde las variables de entorno.
 cloudinary.url=${CLOUDINARY_URL}
 resend.api.key=${RESEND_API_KEY}
-resend.from.email=${RESEND_FROM_EMAIL:onboarding@resend.dev}
+resend.from.email=onboarding@resend.dev
