--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     name: toke-inka-app
     runtime: docker
     plan: free
-    dockerfilePath: ./Dockerfile
+    dockerfilePath: ./DockerFile
     autoDeploy: true
     branch: main
     
